docs: add CLAUDE.md documentation for Claude Code integration
- Add comprehensive documentation for Claude Code (claude.ai/code) integration
- Document project structure including .claude-plugin/plugin.json and skills registry
- Explain different skill types: documentation-only, with reference docs, and executable code
- Provide development commands for wechat-article-cli and gc-log-analyzer
- Detail architecture including skill registration process and SKILL.md frontmatter
- Document wechat-article-cli architecture with its components and browser automation
- Include packaging and distribution instructions for end users